chore: updated to use java 8 as the target language level